    attribute activated. And with the get command you can use the new -k option.
      mojo get -k https://127.0.0.1:3000
    That also means that Mojo::IOLoop::TLS will no longer have a default
    tls_verify value. To disable TLS certificate verification there you can use
    the value 0x00.
      $tls->negotiate(tls_verify => 0x00);
  - Added insecure attribute to Mojo::UserAgent.
  - Added -k option to get command.
  - Fixed a bug where Mojo::DOM could only reuse Mojo::DOM objects containing
    root nodes.

7.79  2018-05-14
  - Added EXPERIMENTAL selector method to Mojo::DOM.
  - Added reply->file helper to Mojolicious::Plugin::DefaultHelpers.

7.78  2018-05-11
  - Deprecated delay helper in Mojolicious::Plugin::DefaultHelpers.
  - Added EXPERIMENTAL new_tag method to Mojo::DOM. (jberger, sri)
  - Added EXPERIMENTAL tag method to Mojo::DOM::HTML.
  - Added EXPERIMENTAL tag_to_html function to Mojo::DOM::HTML.
  - Improved performance of all DOM manipulation methods in Mojo::DOM
    significantly when reusing Mojo::DOM objects.
  - Fixed a Windows directory traversal security issue. (dmanto)

7.77  2018-04-28
  - Added support for namespace selectors like "ns|*" to Mojo::DOM::CSS.
    (jberger)
  - Added support for :link and :visited pseudo-classes to Mojo::DOM::CSS.
  - Added support for hyphen-separated list attribute selectors like
    "[hreflang|=en]" to Mojo::DOM::CSS.

7.76  2018-04-23
  - Due to lack of domain experts on the team, Windows is no longer officially
    supported. Moving forward, we will try to keep Mojolicious installable on
    Windows, but cannot make any promises regarding security and/or reliability.
  - Fixed a bug in Mojolicious::Plugin::Config where the config stash value was
    not available when the config_override feature was used. (tim)

7.75  2018-04-09
  - Deprecated placeholder quoting with "(placeholder)" in favor of
    "<placeholder>".
  - Fixed warnings in Mojo::Collection.

7.74  2018-04-06