@@ -14,6 +14,8 @@
     the value 0x00.
       $tls->negotiate(tls_verify => 0x00);
   - Added insecure attribute to Mojo::UserAgent.
+  - Added EXPERIMENTAL server method to Mojolicious.
+  - Added EXPERIMENTAL before_server_start hook.
   - Added -k option to get command.
   - Fixed a bug where Mojo::DOM could only reuse Mojo::DOM objects containing
     root nodes.
